<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>no.ssb.dc</groupId>
    <artifactId>data-collector-docker</artifactId>
    <version>0.27.2-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Data Collector Docker</name>
    <description>Data Collector Docker</description>
    <url>https://github.com/descoped/</url>
    <inceptionYear>2019</inceptionYear>

    <properties>
        <java.version>17</java.version>
        <module.build.sourceEncoding>UTF-8</module.build.sourceEncoding>
        <maven.javadoc.skip>true</maven.javadoc.skip>

        <slf4j.version>2.0.16</slf4j.version>
        <logback.version>1.5.8</logback.version>
    </properties>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Ove Ranheim</name>
            <email>ove.ranheim@gmail.com</email>
            <url>https://www.linkedin.com/in/overanheim/</url>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>Kim Christian Gaarder</name>
            <url>https://www.linkedin.com/in/kimchristiangaarder/</url>
        </contributor>
    </contributors>

    <scm>
        <connection>scm:git:git://github.com/descoped/data-collector-docker.git</connection>
        <developerConnection>scm:git:git@github.com:descoped/data-collector-docker.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>no.ssb.dc</groupId>
            <artifactId>data-collector-api</artifactId>
            <version>0.2-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>no.ssb.dc</groupId>
            <artifactId>data-collector-core</artifactId>
            <version>0.2-SNAPSHOT</version>
        </dependency>

        <!--
        <dependency>
            <groupId>no.ssb.dc</groupId>
            <artifactId>data-collector-javascript-processor</artifactId>
            <version>0.2-SNAPSHOT</version>
        </dependency>
        -->

        <dependency>
            <groupId>no.ssb.dc</groupId>
            <artifactId>data-collector-server-base</artifactId>
            <version>0.2-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>no.ssb.dc</groupId>
            <artifactId>data-collector-connector-content-stream-rawdata</artifactId>
            <version>0.2-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>no.ssb.rawdata</groupId>
            <artifactId>rawdata-client-api</artifactId>
            <version>0.29-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>no.ssb.rawdata</groupId>
            <artifactId>rawdata-client-provider-gcs</artifactId>
            <version>0.16-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>javax.annotation</groupId>
                    <artifactId>javax.annotation-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>no.ssb.rawdata</groupId>
            <artifactId>rawdata-client-provider-postgres</artifactId>
            <version>0.13-SNAPSHOT</version>
        </dependency>

        <!-- see api module for dapla-secrets declarations -->
        <dependency>
            <groupId>no.ssb.dapla.secrets</groupId>
            <artifactId>dapla-secrets-provider-google-secret-manager</artifactId>
            <version>0.4.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.apache.tika</groupId>
            <artifactId>tika-core</artifactId>
            <version>2.9.2</version>
        </dependency>

        <dependency>
            <groupId>org.lmdbjava</groupId>
            <artifactId>lmdbjava</artifactId>
            <version>0.9.0</version>
<!--            <exclusions>-->
<!--                <exclusion>-->
<!--                    <groupId>com.github.jnr</groupId>-->
<!--                    <artifactId>jffi</artifactId>-->
<!--                </exclusion>-->
<!--            </exclusions>-->
        </dependency>

<!--        <dependency>-->
<!--            <groupId>com.github.jnr</groupId>-->
<!--            <artifactId>jffi</artifactId>-->
<!--            <version>1.2.18</version>-->
<!--        </dependency>-->

        <dependency>
            <groupId>com.github.jnr</groupId>
            <artifactId>jffi</artifactId>
            <version>1.3.13</version>
            <classifier>native</classifier>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>log4j-over-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.sun.mail</groupId>
                    <artifactId>javax.mail</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>net.logstash.logback</groupId>
            <artifactId>logstash-logback-encoder</artifactId>
            <version>8.0</version>
        </dependency>

        <dependency>
            <groupId>no.ssb.dc</groupId>
            <artifactId>data-collector-testutils</artifactId>
            <version>0.2-SNAPSHOT</version>
            <scope>test</scope>
            <exclusions>
                <!-- caused by gcs -->
                <exclusion>
                    <groupId>jakarta.xml.bind</groupId>
                    <artifactId>jakarta.xml.bind-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>jakarta.activation</groupId>
                    <artifactId>jakarta.activation-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.10.0</version>
                        <configuration>
                            <encoding>UTF-8</encoding>
                            <additionalOptions>-Xdoclint:none</additionalOptions>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>coverage</id>
            <properties>
                <sonar.coverage.jacoco.xmlReportPaths>
                    ${project.build.outputDirectory}/../site/jacoco/jacoco.xml
                </sonar.coverage.jacoco.xmlReportPaths>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonarsource.scanner.maven</groupId>
                        <artifactId>sonar-maven-plugin</artifactId>
                        <version>4.0.0.4121</version>
                    </plugin>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>0.8.12</version>
                        <executions>
                            <execution>
                                <id>prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>3.5.0</version>
                        <configuration>
                            <argLine>
                                -XX:+EnableDynamicAgentLoading
                                -Xmx1500m
                            </argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>oss-sonatype</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.7.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                        <version>3.1.1</version>
                        <configuration>
                            <autoVersionSubmodules>true</autoVersionSubmodules>
                            <useReleaseProfile>false</useReleaseProfile>
                            <releaseProfiles>release</releaseProfiles>
                            <goals>deploy</goals>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <encoding>${module.build.sourceEncoding}</encoding>
                    <meminitial>64m</meminitial>
                    <maxmem>512m</maxmem>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.2</version>
            </plugin>

            <!-- Create a module-info.class file. -->
            <plugin>
                <groupId>codes.rafael.modulemaker</groupId>
                <artifactId>modulemaker-maven-plugin</artifactId>
                <version>1.11</version>
                <dependencies>
                    <dependency>
                        <groupId>org.ow2.asm</groupId>
                        <artifactId>asm</artifactId>
                        <version>9.7</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>inject-module</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <name>net.bytebuddy.agent</name>
                    <multirelease>true</multirelease>
                    <packages>net.bytebuddy.agent</packages>
                    <exports>net.bytebuddy.agent</exports>
                    <requires>java.instrument</requires>
                    <static-requires>
                        jdk.attach,
                        com.sun.jna,
                        com.sun.jna.platform
                    </static-requires>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <argLine>
                        -XX:+EnableDynamicAgentLoading
                        --add-opens=no.ssb.dc.server/no.ssb.dc.server.task=ALL-UNNAMED
                        --add-reads no.ssb.dc.content.rawdata=no.ssb.dc.core
                        --add-exports no.ssb.rawdata.postgres/no.ssb.rawdata.provider.postgres=no.ssb.service.provider.api,no.ssb.dc.server
                        -Xmx1500m
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <tagNameFormat>@{project.version}</tagNameFormat>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.6.3,4)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
